功能补充：集成 Nacos 配置实现敏感词库的动态维护